# hs-pkg-config

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  example.hs  hs-pkg-config.cabal  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-lts-9.yaml
src/Data/: PkgConfig.hs
src/Data/PkgConfig/Internal/: PkgConfig.hs  Template.hs
