name:                 hs-pkg-config
version:              0.1.0.0
synopsis:             Create pkg-config configuration files
description:
  Crate /pkg-config/ configuration file from Haskell code using combinators
  specialized for this purpose.
  .
  One of the possible usage examples of this library is generating @.pc@ files
  from <http://shakebuild.com Shake build system>.

homepage:             https://github.com/trskop/hs-pkg-config
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            Copyright (c) 2014 Peter Trško
category:             Data, Development
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    README.md
  , example.hs

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  exposed-modules:
      Data.PkgConfig
    , Data.PkgConfig.Internal.Template
    , Data.PkgConfig.Internal.PkgConfig

  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards

  build-depends:
      base >=4.6 && <4.8
    , text >=0.11 && <1.3
    , data-default-class ==0.*

  ghc-options:          -Wall
