name:                 hs-pkg-config
version:              0.2.1.0
synopsis:             Create pkg-config configuration files
description:
  Create /pkg-config/ configuration file from Haskell code using combinators
  specialized for this purpose.
  .
  <https://wiki.freedesktop.org/www/Software/pkg-config/ Pkg-config> is a tool
  for inserting correct compiler options when compiling libraries or
  applications. It is language-agnostic, but mainly used for building various
  C or C++ libraries and applications.
  .
  One of the possible usage examples of this library is generating @.pc@ files
  from <http://shakebuild.com Shake build system>.
  .
  For usage example see "Data.PkgConfig" module.

homepage:             https://github.com/trskop/hs-pkg-config
bug-reports:          https://github.com/trskop/hs-pkg-config/issues
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            Copyright (c) 2014, Peter Trško
category:             Data, Development
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    ChangeLog.md
  , README.md
  , example.hs

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  exposed-modules:
      Data.PkgConfig
    , Data.PkgConfig.Internal.Template
    , Data.PkgConfig.Internal.PkgConfig

  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , OverloadedStrings
    , RecordWildCards

  build-depends:
      base >=4.6 && <5
    , text >=0.11 && <1.3
    -- ^ This library doesn't depend on anything special, therefore it should
    -- be able to work with wide range of versions. Lower bound 0.11 was
    -- choosen by "cabal init" and the uppoer bound was changed to reflect
    -- current newest version 1.2.0.3.
    , data-default-class ==0.*

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/hs-pkg-config.git

source-repository this
  type:                 git
  location:             git://github.com/trskop/hs-pkg-config.git
  tag:                  0.2.1.0
